# fio_benchmark

./: .gitignore  LICENSE  README.md  full_auto.go  full_auto_tmp.py  pyproject.toml
docs/: fio_benchmark.xmind  requirements.md
docs-website/: package-lock.json
src/fio_benchmark/: benchmark.fio  full_auto.py  v2.py
